--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ main {
 
 #productions {
     min-height: 500px;
+    max-width: 1000px;
     margin: auto;
     padding-top: 25px;
 }
@@ -87,7 +88,7 @@ main {
 .container-productions {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -116,7 +117,7 @@ main {
 .member {
     padding: 10px;
     flex-basis: 280px;
-    color: #fff;
+    color: #000;
 }
 
 .member img {
